<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fbf9f3"
    tools:context=".Unsuccessful">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/btnError"
            android:textColor="#002238"
            android:textSize="36sp"
            app:fontFamily="@font/arista_pro_alternate_bold_trial" />

        <TextView
            android:id="@+id/txtErrorDescribe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="8dp"
            android:paddingTop="24dp"
            android:text="@string/btnErrorDescription"
            android:textColor="#002238"
            android:textSize="16sp"
            app:fontFamily="@font/segoeui" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_margin="34dp"
            android:layout_weight="1"
            android:padding="16dp"
            app:srcCompat="@drawable/dead_fish_union_noun_project" />

        <Button
            android:id="@+id/btnReturn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_secondary"
            android:padding="4dp"
            android:text="@string/btnReturn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>