<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/noaa_unsplash"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen_fader"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="#fbf9f3"
            android:textSize="78sp"
            app:fontFamily="@font/arista_pro_alternate_bold_trial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:padding="6dp"
            android:paddingBottom="24dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:text="@string/txtTagline"
            android:textColor="#fbf9f3"
            android:textSize="22sp"
            app:fontFamily="@font/segoeui"
            app:layout_constraintBottom_toTopOf="@id/loginPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_margin="2dp"
            android:padding="2dp"
            app:srcCompat="@drawable/seaweed_nounproject"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="224dp" />

        <LinearLayout
            android:id="@+id/loginPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_panel"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/hintUsername"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textStyle="normal"
                android:typeface="sans" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/hintPassword"
                android:inputType="textPassword"
                android:padding="8dp"
                android:typeface="sans" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_primary"
                android:padding="4dp"
                android:text="@string/btnSubmit" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>